--- a/BadNews/Views/Shared/_Layout.cshtml
+++ b/BadNews/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 
         <div class="nav-scroller py-1 mb-2"></div>
 
-        <!-- Header /-->
+        @RenderSection("Header", false)
     </div>
 
     @RenderBody()
