--- a/BadNews/Views/Editor/Index.cshtml
+++ b/BadNews/Views/Editor/Index.cshtml
@@ -11,7 +11,7 @@
                         <input asp-for="Header" type="text" size="80">
                     </div>
                     <div>
-                        <span class="text-danger"></span>
+                        <span asp-validation-for="Header" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="p-2">
@@ -22,7 +22,7 @@
                         <textarea asp-for="Teaser" cols="80" rows="5"></textarea>
                     </div>
                     <div>
-                        <span class="text-danger"></span>
+                        <span asp-validation-for="Teaser" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="p-2">
@@ -31,7 +31,7 @@
                         <textarea asp-for="ContentHtml" cols="80" rows="15"></textarea>
                     </div>
                     <div>
-                        <span class="text-danger"></span>
+                        <span asp-validation-for="ContentHtml" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="p-2 mb-4 text-center">
