--- a/BadNews/Views/Shared/_Layout.cshtml
+++ b/BadNews/Views/Shared/_Layout.cshtml
@@ -27,5 +27,6 @@
     <script src="/lib/jquery/dist/jquery.min.js"></script>
     <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="/js/site.js"></script>
+    <partial name="_ValidationScriptsPartial" />
 </body>
 </html>
