--- a/BadNews/Views/News/Index.cshtml
+++ b/BadNews/Views/News/Index.cshtml
@@ -46,7 +46,7 @@
             }
             else
             {
-            <a class="btn btn-outline-primary" asp-controller="News" asp-route-pageIndex="@(Model.PageIndex - 1)">
+            <a class="btn btn-outline-primary" asp-controller="News" asp-route-year="@Model.Year" asp-route-pageIndex="@(Model.PageIndex - 1)">
                 Новее
             </a>
             }
@@ -56,7 +56,7 @@
             }
             else
             {
-                <a class="btn btn-outline-primary" asp-controller="News" asp-route-pageIndex="@(Model.PageIndex + 1)">
+                <a class="btn btn-outline-primary" asp-controller="News" asp-route-year="@Model.Year" asp-route-pageIndex="@(Model.PageIndex + 1)">
                     Старше
                 </a>
             }
@@ -64,6 +64,7 @@
         </div>
 
         <aside class="col-md-4 news-sidebar">
+            <vc:archive-links></vc:archive-links>
         </aside>
     </div>
 </main>
