--- a/BadNews/Views/News/FullArticle.cshtml
+++ b/BadNews/Views/News/FullArticle.cshtml
@@ -13,6 +13,7 @@
         </div>
 
         <aside class="col-md-4 news-sidebar">
+            <vc:archive-links></vc:archive-links>
         </aside>
     </div>
 </main>
