--- a/BadNews/Views/Shared/_Layout.cshtml
+++ b/BadNews/Views/Shared/_Layout.cshtml
@@ -9,8 +9,8 @@
     <meta name="theme-color" content="#563d7c" />
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900"
           rel="stylesheet" />
-    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/site.css" />
+    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="/css/site.css" asp-append-version="true" />
 </head>
 <body>
     <div class="container">
@@ -29,9 +29,9 @@
 
     @RenderBody()
 
-    <script src="/lib/jquery/dist/jquery.min.js"></script>
-    <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <script src="/js/site.js"></script>
+    <script src="/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
+    <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js" asp-append-version="true"></script>
+    <script src="/js/site.js" asp-append-version="true"></script>
     <partial name="_ValidationScriptsPartial" />
 </body>
 </html>
